--- a/x402-mcp/package.json
+++ b/x402-mcp/package.json
@@ -16,10 +16,13 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/node": "^25.1.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.25.3"
+    "@coinbase/x402": "^2.1.0",
+    "@modelcontextprotocol/sdk": "^1.25.3",
+    "@x402/core": "^2.2.0"
   }
 }
