--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,6 @@ services:
       - "8081:8080"
     environment:
       - GIN_MODE=debug
+      - FACILITATOR_URL=http://host.docker.internal:8003/v2/x402
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
