--- a/x402-mcp/package.json
+++ b/x402-mcp/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@coinbase/x402": "^2.1.0",
     "@modelcontextprotocol/sdk": "^1.25.3",
-    "@x402/core": "^2.2.0"
+    "@x402/core": "^2.2.0",
+    "@x402/evm": "^2.2.0"
   }
 }
