--- a/agent-demo/package.json
+++ b/agent-demo/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@modelcontextprotocol/sdk": "^1.25.3",
+    "@x402/evm": "^2.2.0",
+    "@x402/mcp": "2.3.0-alpha",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
     "ora": "^9.1.0",
-    "viem": "^2.45.0",
-    "x402-mcp": "workspace:*"
+    "viem": "^2.45.0"
   },
   "devDependencies": {
     "@types/node": "^25.1.0",
