--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "18081:8080"
     environment:
       - GIN_MODE=debug
-      - FACILITATOR_URL=http://host.docker.internal:8003/v2/x402
+      # - FACILITATOR_URL=http://host.docker.internal:8003/v2/x402
+      - CDP_API_KEY=${CDP_API_KEY}
+      - CDP_API_KEY_SECRET=${CDP_API_KEY_SECRET}
     extra_hosts:
       - "host.docker.internal:host-gateway"
