--- a/agent-demo/package.json
+++ b/agent-demo/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts",
+    "simple": "tsx src/simple.ts",
     "build": "tsc",
     "typecheck": "tsc --noEmit"
   },
