--- a/agent-demo/package.json
+++ b/agent-demo/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "start": "tsx src/index.ts",
-    "simple": "tsx src/simple.ts",
+    "agent": "pnpm run build && tsx src/index.ts",
+    "simple": "pnpm run build && tsx src/simple.ts",
     "build": "tsc",
     "typecheck": "tsc --noEmit"
   },
@@ -13,7 +12,7 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@modelcontextprotocol/sdk": "^1.25.3",
     "@x402/evm": "^2.2.0",
-    "@x402/mcp": "2.3.0-alpha",
+    "@x402/mcp": "2.3.0",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
